rust_snuba/src/processors/snapshots/rust_snuba__processors__tests__schemas@snuba-generic-metrics-GenericSetsMetricsProcessor-snuba-generic-metrics__1__snuba-generic-metrics1.json.snap
---
source: src/processors/mod.rs
description: "{\n  \"version\": 2,\n  \"mapping_meta\": {\n    \"c\": {\n      \"1\": \"c:sessions/session@none\",\n      \"3\": \"environment\",\n      \"5\": \"session.status\"\n    }\n  },\n  \"metric_id\": 1,\n  \"org_id\": 1,\n  \"project_id\": 3,\n  \"retention_days\": 90,\n  \"tags\": {\n    \"3\": \"production\",\n    \"5\": \"init\"\n  },\n  \"timestamp\": 1677512412,\n  \"sentry_received_timestamp\": 1677519000.456,\n  \"type\": \"c\",\n  \"use_case_id\": \"performance\",\n  \"value\": 1\n}\n"
expression: snapshot_payload
---
[]
